testcases/error/member_access_on_array.veryl
module member_access_on_array {
    struct A {
        a: logic,
    }

    var x: A[10];
    let _y: logic = x.a;
    let _z: logic = x[0].a;
}
